<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_name">GPS Test</string>

    <string name="gps_status_tab">Status</string>
    <string name="gps_map_tab">Map</string>
    <string name="gps_sky_tab">Sky</string>

    <string name="gps_start">Start</string>
    <string name="gps_pause">Pause</string>
    <string name="menu_settings">Settings</string>
    <string name="delete_aiding_data">Clear Aiding Data</string>
    <string name="delete_aiding_data_success">Successfully deleted aiding data.</string>
    <string name="delete_aiding_data_failure">Platform does not support deleting aiding data.</string>
    <string name="send_location">Send Location</string>
    <string name="set_fix_frequency">Set Fix Frequency</string>
    <string name="force_time_injection">Inject Time</string>
    <string name="force_time_injection_success">Successfully injected time data.</string>
    <string name="force_time_injection_failure">Platform does not support injecting time data.</string>
    <string name="force_xtra_injection">Inject XTRA Data</string>
    <string name="force_xtra_injection_success">Successfully injected XTRA data.</string>
    <string name="force_xtra_injection_failure">Platform does not support injecting XTRA data.</string>

  	<string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="mode_map">Map</string>
    <string name="mode_satellite">Satellite</string>

    <string name="gps_latitude_label">Lat: </string>
    <string name="gps_longitude_label">Long: </string>
    <string name="gps_fix_time_label">Time: </string>
    <string name="gps_ttff_label">TTFF: </string>
    <string name="gps_altitude_label">Alt: </string>
    <string name="gps_accuracy_label">Acc: </string>
    <string name="gps_speed_label">Speed: </string>
    <string name="gps_bearing_label">Bearing: </string>

    <string name="gps_prn_column_label">PRN</string>
    <string name="gps_snr_column_label">SNR</string>
    <string name="gps_elevation_column_label">Elev</string>
    <string name="gps_azimuth_column_label">Azim</string>
    <string name="gps_flags_column_label">Flags</string>
    <string name="install">Install</string>
    <string name="please_install_google_maps">Please install Google Maps</string>
    <string name="gps_set_location_listener">Started GPS with interval = %1$ss, min. dist. = %2$sm</string>
    
    <!-- User tutorial -->
    <string name="showcase_gps_on_off_title">New GPS controls!</string>
    <string name="showcase_gps_on_off_message">&#8226;  GPS will automatically start (change in \"Settings\")\n&#8226;  The \"Pause/Play\" button stops/starts GPS\n&#8226;  The \"Share\" button sends a location, after getting a GPS fix\n\n<i>(tap to dismiss)</i></string>
    
    <!-- Preferences -->
    <string name="pref_title">Settings</string>
    <string name="pref_map_category_title">Map</string>
    <string name="pref_map_type_title">Map Type</string>
    <string name="pref_map_type_summary">Sets the type of map tiles shown</string>
    <string name="pref_map_type_dialog_title">Choose Map Type</string>
    
    <string name="pref_gps_category_title">GPS</string>
    <string name="pref_auto_start_gps_title">Auto-Start GPS</string>
    <string name="pref_auto_start_gps_summary">Start GPS when the app starts</string>
        
    <string name="pref_gps_min_time_title">Interval</string>
    <string name="pref_gps_min_time_summary">Time between GPS fixes, in seconds</string>
    <string name="pref_gps_min_time_dialog_title">Enter an interval, in seconds</string>
    <string name="pref_gps_min_time_invalid_entry">Interval must be a number</string>
    
    <string name="pref_gps_min_distance_title">Min. Distance</string>
    <string name="pref_gps_min_distance_summary">Minimum distance between location fixes, in meters</string>    
    <string name="pref_gps_min_distance_dialog_title">Enter a min. distance, in meters</string>
    <string name="pref_gps_min_distance_invalid_entry">Min. Distance must be a number</string>
    
    <string name="pref_display_category_title">Display</string>
    <string name="pref_keep_screen_on_title">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Prevents the screen from turning off</string>
    
    <string name="pref_about_category_title">About</string>    
    <string name="pref_show_tutorial_title">Show tutorial</string>
    <string name="pref_show_tutorial_summary">Shows instructions for using the app</string>
</resources>
