<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.google.android.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:clickable="true"
        android:enabled="true"
        android:apiKey="0Pp-fMartm037L5AZ-qYVYkWhvFHp5PVa_CaG4A"
        />

        <LinearLayout
            android:id="@+id/bottom"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

                <Button android:id="@+id/zoom_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_in">
                </Button>
                <Button android:id="@+id/zoom_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_out">
                </Button>
                <Button android:id="@+id/mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode_satellite">
                </Button>

    </LinearLayout>
</LinearLayout>
